# machine-learning

./: .gitignore  README.md  pyproject.toml
homeworks/hwk1/: Table of Contents.html  homework1.py  hwk1-1.ipynb  hwk1.ipynb
homeworks/hwk2/: hwk2.ipynb  testing-hwk2.ipynb
homeworks/hwk3/: Table of Contents.html  adaboost_classifier.pkl  cross_validation_splitter.pkl  hwk-working.ipynb  hwk3-draft.ipynb  logistic_regression_model.pkl  report.md
homeworks/hwk4/: deleted_pieces.ipynb  hwk4-working.ipynb  hwk4.ipynb  lab-4-materials.ipynb  lab-5-materials.ipynb  report.md
homeworks/hwk5/: hwk5.ipynb  report.md
lab1/: lab1_introduction.ipynb
labs/lab11/: lab-11.ipynb
labs/lab2/: Table of Contents.html  lab_2.ipynb
labs/lab3/: Lab-3.ipynb  extendedHousingSata.csv
labs/lab4/: lab-4.ipynb
labs/lab5/: lab5.ipynb
labs/lab6/: lab-6.ipynb
labs/lab7/: Table of Contents.html  lab-7.ipynb
labs/lab8/: Table of Contents.html  fieldsMDS.csv  lab-8.ipynb
labs/lab9/: Table of Contents.html  crater.csv  crater_counts.txt  lab-9.ipynb
recitations/: Spring24_473_Rec1.ipynb
recitations/recitation 3/: Spring2024_473_Lab3.ipynb
recitations/recitation 4/: Spring2024_473_Lab4.ipynb
recitations/recitation_5/: Spring2024_473_Lab5.ipynb
recitations/recitation_6/: Spring2024_473_Lab6_Sln.ipynb
recitations/recitation_8/: Spring2024_473_Lab8.ipynb
