[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["Yan <100032599+whykay-01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.3"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
sklearn = "^0.0.post12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
